# ARENA_3.0

./: .gitignore  pyproject.toml
chapter0_fundamentals/exercises/part0_prereqs/: 0.0_Prerequisites_exercises.ipynb  0.0_Prerequisites_solutions.ipynb
chapter0_fundamentals/exercises/part1_ray_tracing/: 0.1_Ray_Tracing_exercises.ipynb  0.1_Ray_Tracing_solutions.ipynb
chapter0_fundamentals/exercises/part2_cnns/: 0.2_CNNs_&_ResNets_exercises.ipynb  0.2_CNNs_&_ResNets_solutions.ipynb
chapter0_fundamentals/exercises/part3_optimization/: 0.3_Optimization_exercises.ipynb  0.3_Optimization_solutions.ipynb
chapter0_fundamentals/exercises/part4_backprop/: 0.4_Backprop_exercises.ipynb  0.4_Backprop_solutions.ipynb
chapter0_fundamentals/exercises/part5_vaes_and_gans/: 0.5_VAEs_&_GANs_exercises.ipynb  0.5_VAEs_&_GANs_solutions.ipynb
chapter1_transformer_interp/exercises/part1_transformer_from_scratch/: 1.1_Transformer_from_Scratch_exercises.ipynb  1.1_Transformer_from_Scratch_solutions.ipynb
chapter1_transformer_interp/exercises/part2_intro_to_mech_interp/: 1.2_Intro_to_Mech_Interp_solutions.ipynb
chapter1_transformer_interp/exercises/part31_superposition_and_saes/: 1.3.1_Toy_Models_of_Superposition_&_SAEs_exercises.ipynb  1.3.1_Toy_Models_of_Superposition_&_SAEs_solutions.ipynb
chapter1_transformer_interp/exercises/part32_interp_with_saes/: 1.3.2_Interpretability_with_SAEs_exercises.ipynb  1.3.2_Interpretability_with_SAEs_solutions.ipynb
chapter1_transformer_interp/exercises/part41_indirect_object_identification/: 1.4.1_Indirect_Object_Identification_exercises.ipynb  1.4.1_Indirect_Object_Identification_solutions.ipynb
chapter1_transformer_interp/exercises/part42_function_vectors_and_model_steering/: 1.4.2_Function_Vectors_&_Model_Steering_exercises.ipynb  1.4.2_Function_Vectors_&_Model_Steering_solutions.ipynb
chapter1_transformer_interp/exercises/part51_balanced_bracket_classifier/: 1.5.1_Balanced_Bracket_Classifier_exercises.ipynb  1.5.1_Balanced_Bracket_Classifier_solutions.ipynb
chapter2_rl/exercises/part1_intro_to_rl/: 2.1_Intro_to_RL_exercises.ipynb  (+1 more)
infrastructure/master_files/: master_0_0.ipynb  master_0_1.ipynb  master_0_2.ipynb  master_0_3.ipynb  master_0_4.ipynb  master_0_5.ipynb  master_1_1.ipynb  master_1_2.ipynb  master_1_3_1.ipynb  master_1_3_2.ipynb  master_1_4_1.ipynb  master_1_4_2.ipynb  master_1_5_1.ipynb  master_1_5_2.ipynb  master_1_5_3.ipynb  master_2_1.ipynb  master_2_2.ipynb  master_2_3.ipynb  master_2_4.ipynb  master_3_1.ipynb  master_3_2.ipynb  master_3_3.ipynb  master_3_4.ipynb  stats.ipynb
(+25 files in other folders)
